k8s/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubedemo
  labels:
    app: kubedemo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kubedemo
  template:
    metadata:
      labels:
        app: kubedemo
    spec:
      containers:
        - name: kubedemo
          image: rahulmallu/kubedemo:1.0
          ports:
            - containerPort: 9090
          volumeMounts:
            - mountPath: /config
              name: config-volume
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: kubedemo-config
