k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kubedemo
  labels:
    app: kubedemo
spec:
  selector:
    app: kubedemo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9090
      nodePort: 30080
  type: NodePort
