k8s/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubedemo-ingress
  labels:
    app: kubedemo
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubedemo
                port:
                  number: 80
      host: kubedemo.test
